--- a/style_animesongs.css
+++ b/style_animesongs.css
@@ -17,7 +17,7 @@ header {
  }
 
 h1 {
-   font-family: "Comic Sans MS", cursive, sans-serif;
+   font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
    font-size: 35px;
    letter-spacing: 2.2px;
    word-spacing: 2.8px;
@@ -31,7 +31,7 @@ h1 {
 }
 
 h2 {
-   font-family: "Comic Sans MS", cursive, sans-serif;
+   font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
    font-size: 35px;
    letter-spacing: 1px;
    word-spacing: 2px;
@@ -71,7 +71,7 @@ nav ul li {
  }
 
  a:hover {
-    color: rgb(182, 35, 9);
+    color: rgb(229, 108, 34);
  }
 
 
@@ -89,7 +89,7 @@ p {
    text-decoration: none;
    padding: 0px;
    border-radius: 0px;
-   font-family: Comic Sans MS, Comic Sans ;
+   font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif ;
    font-size: 15px;  
    color: #ffee00;
    background-color:rgb(110, 76, 234); 
@@ -123,7 +123,7 @@ p {
  }
 
  table.blueTable {
-    font-family: "Comic Sans MS", cursive, sans-serif;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serifs;
     background-color: #FFF787;
     width: 100%;
     text-align: left;
