--- a/style_listaanime.css
+++ b/style_listaanime.css
@@ -17,7 +17,7 @@ header {
  }
 
 h1 {
-   font-family: "Comic Sans MS", cursive, sans-serif;
+   font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
    font-size: 35px;
    letter-spacing: 2.2px;
    word-spacing: 2.8px;
@@ -32,7 +32,7 @@ h1 {
 }
 
 h2 {
-   font-family: "Comic Sans MS", cursive, sans-serif;
+   font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
    font-size: 35px;
    letter-spacing: 1px;
    word-spacing: 2px;
@@ -74,7 +74,7 @@ nav ul li {
  }
 
  a:hover {
-    color: rgb(182, 35, 9);
+    color: rgb(229, 108, 34);
  }
 
 
@@ -92,7 +92,7 @@ p {
    text-decoration: none;
    padding: 0px;
    border-radius: 0px;
-   font-family: Comic Sans MS, Comic Sans ;
+   font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif ;
    font-size: 15px;  
    color: #ffee00;
    background-color:rgb(110, 76, 234); 
@@ -118,7 +118,7 @@ p {
  } 
 
  #nome:hover {
-    color: rgb(182, 35, 9);
+    color: rgb(229, 108, 34);
  }
 
  #cerca {
